# htwg-msi-as

./: README.md
autonome roboter/aufgabe_2/husky_highlevel_controller/: CMakeLists.txt  package.xml
autonome roboter/aufgabe_2/husky_highlevel_controller/config/: config.rviz  config.yaml
autonome roboter/aufgabe_2/husky_highlevel_controller/launch/: husky.launch
autonome roboter/aufgabe_2/husky_highlevel_controller/src/: Algorithm.cpp  HuskyHighlevelController.cpp  husky_highlevel_controller_node.cpp
autonome roboter/aufgabe_3/husky_highlevel_controller/: CMakeLists.txt  package.xml
autonome roboter/aufgabe_3/husky_highlevel_controller/config/: config.rviz  config.yaml
autonome roboter/aufgabe_3/husky_highlevel_controller/include/husky_highlevel_controller/: Algorithm.hpp  HuskyHighlevelController.hpp
autonome roboter/aufgabe_3/husky_highlevel_controller/launch/: husky.launch
autonome roboter/aufgabe_3/husky_highlevel_controller/src/: Algorithm.cpp  HuskyHighlevelController.cpp
deep learning/Uebung2/: Aufgabe1_Edgelovers.ipynb  Aufgabe2_cl_cnn_faces_nolsg.ipynb
deep learning/Uebung3/: Aufgabe1.ipynb  Aufgabe2.ipynb
machine learning/Uebung 1 EDA/: ML_Uebung1_1.ipynb  ML_Uebung1_2.ipynb
machine learning/Uebung 2 Hauptkomponentenanalyse/: ML_Uebung2_1.ipynb  ML_Uebung2_2.ipynb
machine learning/Uebung 3 Naiver Bayes-Klassifikator/: ML_Uebung3_2.ipynb
stochastik/: formelsammlung_stochastik.ipynb
stochastik/zusatzaufgaben/: umfrage.xlsx
stochastik_zusatzaufgaben/: aufgabe1.ipynb  aufgabe2.ipynb
(+2 files in other folders)
