<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The husky_highlevel_controller package</description>
  <author email="yannik.motzet@htw-konstanz.de">Yannik Motzet</author>
  <author email="max.dunger@htw-konstanz.de">Max Dunger</author>
  <maintainer email="yannik.motzet@htw-konstanz.de">Yannik Motzet</maintainer>
  <maintainer email="max.dunger@htw-konstanz.de">Max Dunger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
      
</package>
